--- a/assets/sass/base/_reset.sass
+++ b/assets/sass/base/_reset.sass
@@ -5,9 +5,14 @@ body
     list-style: none
     margin: 0
     padding: 0
+    height: 100vh
+    overflow: hidden
 
 a
     text-decoration: none
     color: var.$colorGrey
     &:hover
         text-decoration: underline
+
+li
+    list-style: none
