--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -3,6 +3,8 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 a {
@@ -13,26 +15,77 @@ a:hover {
   text-decoration: underline;
 }
 
-.header__nav {
+li {
+  list-style: none;
+}
+
+.home {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.menu {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightblue;
-  height: 10rem;
+  height: 8rem;
+  width: 1200px;
+  margin: 0 auto;
 }
-.header__nav__li {
+.menu ul {
+  display: flex;
+  justify-content: space-between;
+}
+.menu__li {
   font-size: 2rem;
   padding: 2rem;
   text-transform: uppercase;
 }
-.header__nav__li--logo {
-  width: 5rem;
+.menu__li a {
+  color: #424952;
+}
+.menu__li--logo {
+  width: 8rem;
 }
 
-.body__img {
+.home__img {
   width: 100%;
   height: 100vh;
   -o-object-fit: cover;
      object-fit: cover;
   overflow: hidden;
+  opacity: 1;
+}
+.home__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.home__title--span {
+  color: white;
+  text-transform: uppercase;
+  font-family: "Nobile", sans-serif;
+  font-size: 4rem;
+  font-weight: normal;
+}
+
+.prestation-cover__image {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+  opacity: 0.5;
+}
+
+.footer {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
 }/*# sourceMappingURL=main.css.map */
