--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -1,5 +1,26 @@
-.body__img
-    width: 100%
-    height: 100vh
-    object-fit: cover
-    overflow: hidden
+@use "../abstracts/_mixins" as mixin
+@use "../abstracts/_variables" as var
+
+
+
+.home
+    &__img
+        @include mixin.coverImage($opacity: 1) 
+    
+    &__title
+        position: absolute
+        top: 50%
+        left: 50%
+        margin: 0
+        display: flex
+        flex-direction: column
+        transform: translate(-50%, -50%)
+        text-align: center
+
+        &--span
+            color: white
+            text-transform: uppercase
+            font-family: 'Nobile', sans-serif
+            font-size: 4rem
+            font-weight: normal
+
