create database and add mixins in assets

--- a/assets/sass/base/_reset.sass
+++ b/assets/sass/base/_reset.sass
@@ -1,4 +1,4 @@
-@use "../abstracts/_variables" as var
+@use "../abstracts/_all" as abstracts
 
 body
     font-family: 'Belleza', sans-serif 
@@ -10,7 +10,7 @@ body
 
 a
     text-decoration: none
-    color: var.$colorGrey
+    color: abstracts.$colorGrey
     &:hover
         text-decoration: underline
 
