--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -1,4 +1,4 @@
-@use "../abstracts/_variables" as var
+@use "../abstracts/_all" as abstracts
     
 .home
     height: 100vh
@@ -20,7 +20,7 @@
         padding: 2rem
         text-transform: uppercase
         a
-            color: var.$colorGrey
+            color: abstracts.$colorGrey
         
         &--logo
             width: 8rem
