--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,5 @@
 @use "base/_reset"
 @use "layout/_header"
 @use "pages/_home"
-@use "layout/_prestation"
+@use "pages/_prestation"
 @use "layout/_footer"
