--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -80,7 +80,54 @@ li {
   -o-object-fit: cover;
      object-fit: cover;
   overflow: hidden;
-  opacity: 0.5;
+  opacity: 0.4;
+}
+
+.grid-container {
+  width: 65%;
+  height: 70%;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+.grid-container__item {
+  height: 90%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  cursor: pointer;
+}
+.grid-container__item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.grid-container__item__text {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  translate: -50% -50%;
+  flex-direction: column;
+  left: 50%;
+  width: 100%;
+}
+.grid-container__item__text--span {
+  color: white;
+  font-size: 2rem;
+}
+.grid-container__item__description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: red;
+  width: 100%;
 }
 
 .footer {
