implement gallery and photo entities

--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -4,3 +4,9 @@
     object-fit: cover
     overflow: hidden
     opacity: $opacity
+
+@mixin position($top: 16%)
+    position: absolute
+    left: 50%
+    top: $top
+    transform: translate(-50%, -50%)
