--- a/assets/sass/pages/_prestation.sass
+++ b/assets/sass/pages/_prestation.sass
@@ -1,16 +1,20 @@
 @use "../abstracts/_all" as abstracts
     
-.prestation-cover__image
-    @include abstracts.coverImage($opacity: 0.4)
+.prestation-cover
+    &__image
+        @include abstracts.coverImage($opacity: 0.4)
+    &__title
+        @include abstracts.position()
+        text-transform: uppercase
+        color: black
+        font-size: 2rem
+        font-weight: normal
 
 .grid-container
-    width: 65%
+    @include abstracts.position($top: 58%)
+    width: 1200px
     height: 70%
-    position: absolute
-    top: 55%
-    left: 50%
     margin: 0
-    transform: translate(-50%, -50%)
     text-align: center
     display: grid
     grid-template-columns: 1fr 1fr 1fr
@@ -21,6 +25,23 @@
         object-fit: cover
         position: relative
         cursor: pointer
+        overflow: hidden
+        &:hover
+            box-shadow: 10px 5px 20px abstracts.$colorGrey
+        &:hover .grid-container__item__description
+            animation-name: hover-prestations 
+            animation-duration: 400ms
+            animation-timing-function: ease
+            animation-fill-mode: forwards
+            animation-delay: 0
+        &:hover .grid-container__item__text
+            animation-name: hover-prestations-text 
+            animation-duration: 400ms
+            animation-timing-function: ease
+            animation-fill-mode: forwards
+            animation-delay: 0
+        &:hover img
+            filter: brightness(50%)
 
         img
             width: 100%
@@ -30,19 +51,46 @@
         &__text
             display: flex
             position: absolute
-            top: 50%
+            top: 45%
             translate: -50% -50%
             flex-direction: column
-            left: 50%
+            left: 150%
             width: 100%
 
-            &--span
+            &--title
                 color: white
-                font-size: 2rem
+                font-size: 2.5rem
+                padding: 0.5rem
+            &--prices
+                @extend .grid-container__item__text--title
+                font-size: 1.7rem
 
         &__description
             position: absolute
             bottom: 0
-            left: 0
-            background: red
+            left: -100%
+            background: abstracts.$colorGrey
             width: 100%
+            color: white
+            font-size: 1.2rem
+            height: 25%
+            overflow: hidden
+            display: flex
+            align-items: center
+
+            p
+                max-width: 80%
+                margin: 0.2rem auto
+
+@keyframes hover-prestations
+    0%
+        left: -100%
+    100%
+        left: 0
+
+@keyframes hover-prestations-text
+    0%
+        left: 150%
+    100%
+        left: 50%
+        
