--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -10,3 +10,17 @@
     left: 50%
     top: $top
     transform: translate(-50%, -50%)
+
+@mixin backgroundImage($url: "", $opacity: 1)
+    content: ' '
+    display: block
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    opacity: $opacity
+    background-image: url($url)
+    background-repeat: no-repeat
+    background-position: 50% 0
+    background-size: cover
