--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   height: 100vh;
   overflow: hidden;
+  position: relative;
 }
 
 a {
@@ -29,8 +30,11 @@ li {
   justify-content: center;
   align-items: center;
   height: 8rem;
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
+  position: absolute;
+  z-index: 2;
+  background-color: white;
 }
 .menu ul {
   display: flex;
@@ -191,22 +195,37 @@ li {
     left: 50%;
   }
 }
-.gallery-cover__image {
+main::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  background-image: url("../../images/couple_foret.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 50%;
+  top: 580px;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
-  overflow: hidden;
-  opacity: 0.4;
 }
 
 .gallery-nav {
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  left: 50%;
-  top: 18%;
-  transform: translate(-50%, -50%);
+  max-width: 1200px;
+  align-self: center;
 }
 .gallery-nav__a {
   font-size: 1.8rem;
@@ -215,19 +234,52 @@ li {
 }
 
 .gallery-photo {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 1200px;
+  display: flex;
+  position: relative;
+  height: 600px;
+  align-items: center;
+  width: 100%;
+}
+.gallery-photo__container {
+  flex: 0 0 calc(33.33% - 100px);
+  margin-left: 50px;
+  margin-right: 50px;
+  max-width: 100%;
+  max-height: 100%;
+  height: 580px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .gallery-photo__img {
-  width: 10rem;
   -o-object-fit: cover;
      object-fit: cover;
-  padding: 2rem;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.arrow-container {
+  position: absolute;
+  left: 32%;
+  top: 45%;
+  display: flex;
+  justify-content: space-between;
+  width: 36%;
+}
+.arrow-container__btn {
+  background-color: none;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.arrow-container__btn a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 3rem;
+  cursor: pointer;
 }
 
 .footer {
