--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -9,8 +9,11 @@
     justify-content: center
     align-items: center
     height: 8rem
-    width: 1200px
+    width: 100%
     margin: 0 auto
+    position: absolute
+    z-index: 2
+    background-color: white
     ul
         display: flex
         justify-content: space-between
