--- a/assets/sass/pages/_gallery.sass
+++ b/assets/sass/pages/_gallery.sass
@@ -1,12 +1,22 @@
 @use "../abstracts/_all" as abstracts
 
-.gallery-cover__image
-    @include abstracts.coverImage($opacity: 0.4)
+main
+    &::before
+        @include abstracts.backgroundImage($url: "../../images/couple_foret.jpg", $opacity: 0.4)
+
+.gallery
+    display: flex
+    flex-direction: column
+    @include abstracts.position($top: 580px)
+    width: 100%
+    height: 100vh
+
 
 .gallery-nav
     display: flex
     justify-content: space-between
-    @include abstracts.position($top: 18%)
+    max-width: 1200px
+    align-self: center
 
     &__a
         font-size: 1.8rem
@@ -14,13 +24,77 @@
         margin: 1rem
 
 .gallery-photo
-    @include abstracts.position($top: 50%)
-    width: 1200px
     display: flex
-    justify-content: center
+    position: relative
+    height: 600px
+    align-items: center
+    width: 100%
+
+    &__container
+        flex: 0 0 calc(33.33% - 100px)
+        margin-left: 50px
+        margin-right: 50px
+        max-width: 100%
+        max-height: 100%
+        height: 580px
+        display: flex
+        justify-content: center
+        align-items: center
 
     &__img
-        width: 10rem
         object-fit: cover
-        padding: 2rem
+        max-height: 100%
+        max-width: 100%
+        // cursor: pointer
+        // &:hover
+        //     transform: scale(1.2)
+
+.arrow-container
+    position: absolute
+    left: 32%
+    top: 45%
+    display: flex
+    justify-content: space-between
+    width: 36%
+
+    &__btn
+        background-color: none
+        width: 4rem
+        height: 4rem
+        border-radius: 50%
+        display: flex
+        justify-content: center
+        align-items: center
+
+        a
+            text-decoration: none
+            color: #000000
+            font-size: 3rem
+            cursor: pointer
+
+
+// @keyframes slideAnimation 
+//     from 
+//         transform: translateX(0)
+    
+//     to 
+//         transform: translateX(33%)
+
+// @keyframes slideAnimationBack
+//     from 
+//         transform: translateX(0)
+    
+//     to 
+//         transform: translateX(-33%)
+    
+
+
+// .slide-animation 
+//     animation: slideAnimation 0.4s ease-out forwards
+
+// .slide-back
+//     animation: slideAnimationBack 0.4s ease-out forwards
+
+
+
 
