start login features

--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -24,3 +24,9 @@
     background-repeat: no-repeat
     background-position: 50% 0
     background-size: cover
+
+@mixin title($color: black, $fontSize: 2rem)
+    text-transform: uppercase
+    color: $color
+    font-size: $fontSize
+    font-weight: normal
