--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -287,4 +287,29 @@ main::before {
   bottom: 10px;
   left: 50%;
   transform: translate(-50%);
+}
+
+.login__img {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+  opacity: 0.4;
+}
+.login__title {
+  position: absolute;
+  left: 50%;
+  top: 16%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  color: black;
+  font-size: 2rem;
+  font-weight: normal;
+}
+.login__form {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -50%);
 }/*# sourceMappingURL=main.css.map */
