--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,3 +5,6 @@
 @use "pages/_gallery"
 @use "layout/_footer"
 @use "pages/_login"
+@use "pages/_admin"
+@use "components/_icon"
+@use "components/_grid"
