--- a/assets/sass/pages/_gallery.sass
+++ b/assets/sass/pages/_gallery.sass
@@ -1,6 +1,6 @@
 @use "../abstracts/_all" as abstracts
 
-main
+.gallery--main
     &::before
         @include abstracts.backgroundImage($url: "../../images/couple_foret.jpg", $opacity: 0.4)
 
