--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,7 +4,10 @@
 @use "pages/_prestation"
 @use "pages/_gallery"
 @use "layout/_footer"
-@use "pages/_login"
-@use "pages/_admin"
+@use "pages/admin/_login"
 @use "components/_icon"
-@use "components/_grid"
+@use "components/_button"
+@use "components/_form"
+@use "components/_hamburger"
+@use "pages/admin/_dashboard"
+@use "pages/admin/_prestationAdmin"
