--- a/assets/sass/abstracts/_mixins.sass
+++ b/assets/sass/abstracts/_mixins.sass
@@ -1,3 +1,5 @@
+@use "./_variables" as abstracts
+    
 @mixin coverImage($opacity: 1, $height: 100vh)
     width: 100%
     height: $height
@@ -31,3 +33,34 @@
     font-size: $fontSize
     font-weight: normal
 
+@mixin grid()
+    display: grid
+    grid-template-columns: 1fr
+    margin: 2rem auto
+    padding: 2rem
+    background-color: white
+    position: relative
+    width: 80%
+    @media screen and (max-width: 600px)
+        margin: 0
+        padding: 0
+        width: 100%
+
+@mixin button($font-size: 1.5rem, $width: 10rem, $padding: 0.5rem)
+    font-size: $font-size
+    width: $width
+    background-color: abstracts.$colorGrey
+    color: white
+    border-radius: 20px
+    border: none
+    padding: $padding
+    cursor: pointer
+    &:hover
+        background-color: darken(abstracts.$colorGrey ,20%)
+    @media screen and (max-width: 490px)
+        width: 5rem
+        font-size: 1.2rem
+
+@mixin max-width($max-width)
+    @media screen and (max-width: $max-width)
+        @content
