--- a/assets/sass/base/_reset.sass
+++ b/assets/sass/base/_reset.sass
@@ -12,6 +12,7 @@ body
 a
     text-decoration: none
     color: abstracts.$colorGrey
+    text-align: center
     &:hover
         text-decoration: underline
 
