--- a/assets/sass/pages/_gallery.sass
+++ b/assets/sass/pages/_gallery.sass
@@ -7,9 +7,11 @@
 .gallery
     display: flex
     flex-direction: column
-    @include abstracts.position($top: 580px)
+    @include abstracts.position($top: 63%)
     width: 100%
     height: 100vh
+    @include abstracts.max-width(900px)
+        top: 65%
 
 
 .gallery-nav
@@ -17,11 +19,18 @@
     justify-content: space-between
     max-width: 1200px
     align-self: center
+    flex-wrap: wrap
 
     &__a
         font-size: 1.8rem
         padding: 1rem
         margin: 1rem
+        @include abstracts.max-width(900px)
+            padding: 0.5rem
+            margin: 0.5rem
+        @include abstracts.max-width(700px)
+            padding: 0.3rem
+            margin: 0.3rem
 
 .gallery-photo
     display: flex
@@ -29,6 +38,11 @@
     height: 600px
     align-items: center
     width: 100%
+    @include abstracts.max-width(1400px)
+        margin: 0 -30px
+    @include abstracts.max-width(900px)
+        height: 90%
+        margin: 0
 
     &__container
         flex: 0 0 calc(33.33% - 100px)
@@ -40,14 +54,19 @@
         display: flex
         justify-content: center
         align-items: center
+        @include abstracts.max-width(1400px)
+            flex: 0 0 50%
+            margin-left: 30px
+            margin-right: 30px
+        @include abstracts.max-width(900px)
+            flex: 0 0 100%
+            margin: 0
+
 
     &__img
         object-fit: cover
         max-height: 100%
         max-width: 100%
-        // cursor: pointer
-        // &:hover
-        //     transform: scale(1.2)
 
 .arrow-container
     position: absolute
@@ -56,8 +75,11 @@
     display: flex
     justify-content: space-between
     width: 36%
+    @include abstracts.max-width(1400px)
+        left: 0
+        width: 100%
 
-    &__btn
+    &__btn--right
         background-color: none
         width: 4rem
         height: 4rem
@@ -65,7 +87,15 @@
         display: flex
         justify-content: center
         align-items: center
+        @include abstracts.max-width(1400px)
+            justify-content: flex-start
 
+    &__btn--left
+        @extend .arrow-container__btn--right
+        @include abstracts.max-width(1400px)
+            justify-content: flex-end
+    
+    div
         a
             text-decoration: none
             color: #000000
