--- a/assets/sass/pages/admin/_dashboard.sass
+++ b/assets/sass/pages/admin/_dashboard.sass
@@ -1,4 +1,4 @@
-@use "../abstracts/_all" as abstracts
+@use "../../abstracts/_all" as abstracts
 
 .dashboard 
     display: flex
@@ -9,24 +9,29 @@
     position: relative
     background-color: abstracts.$colorGrey
     height: 100vh
-    width: 15rem
+    width: 13rem
     display: flex
     flex-direction: column
     align-items: center
     color: white
     padding: 1.5rem
+    @include abstracts.max-width(1200px)
+        width: 5%
 
     &__home
         display: flex
         align-items: center
         margin: 1rem
         padding-bottom: 2rem
-        a
+        &--link
             color: white
-            font-size: 1.7rem
+            font-size: 1.6rem
             padding: 0.5rem
-        img
-            padding: 0.5rem
+            @include abstracts.max-width(1200px)
+                display: none
+
+            img
+                padding: 0.5rem
 
     &__items
         &--div
@@ -35,3 +40,4 @@
 
 .dashboardContent
     width: 100%
+    position: relative
