implement login and logout fonctionnality

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,5 +9,8 @@
 @use "components/_button"
 @use "components/_form"
 @use "components/_hamburger"
+@use "components/_modal"
 @use "pages/admin/_dashboard"
 @use "pages/admin/_prestationAdmin"
+@use "pages/admin/_galleryAdmin"
+@use "themes/_security"
