--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -441,12 +441,36 @@ li {
 .login__form {
   position: absolute;
   left: 50%;
-  top: 35%;
+  top: 48%;
   transform: translate(-50%, -50%);
+  background-color: white;
+  display: flex;
+  padding: 1.5rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
 }
 
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  width: 100%;
+}
+.form-group label, .form-group input {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+}
 .icon {
   width: 2.5rem;
+}
+
+.miniature {
+  width: 3rem;
+  height: 3rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .addButton {
@@ -629,6 +653,27 @@ li {
   transform: rotate(45deg) translate(-9px, -7px);
 }
 
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.modal-wrapper {
+  overflow: auto;
+  width: 600px;
+  max-width: calc(100vw - 20px);
+  max-height: calc(100vh - 20px);
+  padding: 20px;
+  background-color: white;
+}
+
 .dashboard {
   display: flex;
 }
@@ -689,6 +734,33 @@ li {
 .dashboardContent {
   width: 100%;
   position: relative;
+}
+.dashboardContent__title, .dashboardContent__link {
+  margin: 1rem;
+  font-family: nobile;
+}
+.dashboardContent__button {
+  font-size: 1.5rem;
+  width: 12rem;
+  background-color: #424952;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  margin: 1rem;
+}
+.dashboardContent__button:hover {
+  background-color: #151719;
+}
+@media screen and (max-width: 490px) {
+  .dashboardContent__button {
+    width: 5rem;
+    font-size: 1.2rem;
+  }
+}
+.dashboardContent__link {
+  font-size: 1.5rem;
 }
 
 .dashboardContent {
@@ -777,4 +849,19 @@ li {
   .grid-container {
     grid-template-columns: 1fr;
   }
+}
+.miniature-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.errorAccess {
+  position: absolute;
+  left: 50%;
+  top: 25%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5rem;
+  border: 2px solid red;
+  padding: 1rem;
+  background-color: rgba(242, 10, 10, 0.2);
 }/*# sourceMappingURL=main.css.map */
