--- a/assets/sass/pages/admin/_login.sass
+++ b/assets/sass/pages/admin/_login.sass
@@ -9,4 +9,25 @@
         @include abstracts.title()
     
     &__form
-        @include abstracts.position(35%)
+        @include abstracts.position(48%)
+        background-color: white
+        display: flex
+        padding: 1.5rem
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        width: 30%
+
+.form-group
+    display: flex
+    flex-direction: column
+    margin: 0.5rem
+    width: 100%
+
+    label, input
+        padding: 0.5rem
+        font-size: 1.5rem
+
+    input
+        &:hover
+
