add .htaccess for rewriting url

--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -864,4 +864,8 @@ li {
   border: 2px solid red;
   padding: 1rem;
   background-color: rgba(242, 10, 10, 0.2);
+}
+
+.error-message, .invalid-feedback {
+  color: red;
 }/*# sourceMappingURL=main.css.map */
