--- a/assets/sass/themes/_security.sass
+++ b/assets/sass/themes/_security.sass
@@ -6,3 +6,7 @@
     border: 2px solid red
     padding: 1rem
     background-color: rgba(242, 10, 10, 20%)
+
+.error-message, .invalid-feedback
+    color: red
+
