make a crud for photos admin

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -13,4 +13,5 @@
 @use "pages/admin/_dashboard"
 @use "pages/admin/_prestationAdmin"
 @use "pages/admin/_galleryAdmin"
+@use "pages/admin/_photoAdmin"
 @use "themes/_security"
