--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   font-family: "Belleza", sans-serif;
   list-style: none;
@@ -850,9 +851,159 @@ li {
     grid-template-columns: 1fr;
   }
 }
-.miniature-container {
+.miniatures-container {
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 1000px) {
+  .miniatures-container {
+    display: none;
+  }
+}
+
+.adminBody {
+  height: 100%;
+  overflow: scroll;
+}
+
+.adminMenu {
+  height: auto;
+}
+
+.galleryPhoto {
+  padding: 20px;
+}
+.galleryPhoto__title, .categoryPhoto div h3 {
+  font-family: nobile;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: initial;
+  font-size: 2rem;
+}
+
+.galleryPhoto__button--container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.galleryPhoto__button--container a {
+  font-size: 1.5rem;
+  width: 12rem;
+  background-color: #424952;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  margin: 0 20px;
+}
+.galleryPhoto__button--container a:hover {
+  background-color: #151719;
+}
+@media screen and (max-width: 490px) {
+  .galleryPhoto__button--container a {
+    width: 5rem;
+    font-size: 1.2rem;
+  }
+}
+
+.categoryPhoto {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+}
+.categoryPhoto div h3 {
+  font-size: 1.2rem;
+}
+.categoryPhoto__grid {
+  position: relative;
+}
+
+.mini {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+.mini:hover {
+  transform: scale(1.1);
+}
+
+.delete-overlay {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.categoryPhoto__grid:hover .delete-overlay {
+  opacity: 1;
+}
+
+.delete-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+.delete-button svg {
+  width: 24px;
+  height: 24px;
+  fill: #fff;
+}
+
+.formPhoto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.2rem;
+}
+.formPhoto__button {
+  border: none;
+  background: none;
+  margin: 10px;
+  padding: 0;
+  font-size: 1.4rem;
+  text-decoration: none;
+  cursor: pointer;
+  color: #000;
+  transition: -webkit-text-decoration 0.3s;
+  transition: text-decoration 0.3s;
+  transition: text-decoration 0.3s, -webkit-text-decoration 0.3s;
+}
+.formPhoto__button:hover {
+  text-decoration: underline;
+}
+
+.custom-file-input {
+  position: relative;
+  overflow: hidden;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: rgb(167, 118, 24);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  text-transform: uppercase;
+  /* Style de l'input réel */
+}
+.custom-file-input:hover {
+  background-color: #7a5612;
+}
+
+.custom-file-input input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  /* Changement de couleur au survol */
 }
 
 .errorAccess {
