add form in page contact

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,6 +3,7 @@
 @use "pages/_home"
 @use "pages/_prestation"
 @use "pages/_gallery"
+@use "pages/_contact"
 @use "layout/_footer"
 @use "pages/admin/_login"
 @use "components/_icon"
