--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -410,6 +410,92 @@ li {
   cursor: pointer;
 }
 
+.contact-cover {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+  opacity: 0.4;
+}
+.contact-cover__container {
+  position: absolute;
+  left: 50%;
+  top: 66%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  margin: 0;
+  text-align: center;
+  width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .contact-cover__container {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contact-cover__container {
+    width: 90%;
+  }
+}
+
+.form-contact {
+  max-width: 600px;
+  margin: 50px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.form-contact__title {
+  margin-top: 0;
+  font-size: 24px;
+  text-align: center;
+}
+.form-contact__container {
+  padding: 20px;
+  box-sizing: border-box;
+}
+.form-contact__container--div {
+  display: flex;
+  justify-content: space-between;
+}
+.form-contact__group {
+  margin-bottom: 20px;
+  width: 100%;
+}
+.form-contact__group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.form-contact__group input[type=text], .form-contact__group input[type=email], .form-contact__group input[type=tel], .form-contact__group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+.form-contact__group input[type=text]:focus, .form-contact__group input[type=email]:focus, .form-contact__group input[type=tel]:focus, .form-contact__group textarea:focus {
+  border: 2px solid rgb(167, 118, 24);
+  outline: none;
+}
+.form-contact__group textarea {
+  height: 100px;
+}
+.form-contact__group input[type=submit] {
+  background-color: rgb(167, 118, 24);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.form-contact__group input[type=submit]:hover {
+  background-color: #4e370b;
+}
+
 .footer {
   position: absolute;
   bottom: 10px;
@@ -1003,7 +1089,6 @@ li {
   height: 100%;
   opacity: 0;
   cursor: pointer;
-  /* Changement de couleur au survol */
 }
 
 .errorAccess {
